# dja

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  logs.md
.github/workflows/: claude.yml  release.yml
docs/superpowers/plans/: 2026-03-26-monitor-tui.md  2026-03-28-auto-cache-control-injection.md
docs/superpowers/specs/: 2026-03-26-monitor-tui-design.md  2026-03-28-auto-cache-control-injection-design.md  2026-03-28-auto-cache-control-injection-flow.mmd
src/: config.rs  lib.rs  main.rs
src/cache/: db.rs  eviction.rs  lookup.rs  mod.rs  store.rs  tests.rs
src/cli/: clear.rs  config_cmd.rs  export.rs  import.rs  init.rs  log.rs  mod.rs  monitor.rs  p2p.rs  start.rs  stats.rs  test_cmd.rs  uninstall.rs  verify.rs
src/embedding/: download.rs  mod.rs  model.rs  tokenizer.rs
src/p2p/: client.rs  friends.rs  heartbeat.rs  index.rs  lookup.rs  mod.rs  server.rs
src/proxy/: cache_control.rs  eligibility.rs  forward.rs  handler.rs  inflight.rs  internal.rs  metrics.rs  mod.rs  server.rs  stream.rs
tests/: proxy_test.rs
