[package]
name = "dja"
version = "0.1.0"
edition = "2024"
description = "Semantic cache proxy for AI coding tools"

[dependencies]
# HTTP proxy stack
axum = "0.8"
hyper = "1"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }

# ONNX Runtime for embedding inference
ort = "2.0.0-rc.12"

# HuggingFace tokenizer
tokenizers = "0.21"

# libSQL/Turso for vector cache storage
libsql = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }

# Config / serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# TUI for monitor
ratatui = "0.29"
crossterm = "0.28"
async-stream = "0.3"

# Utilities
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
bytes = "1"
futures = "0.3"
http-body-util = "0.1"
tokio-stream = "0.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
